--- a/exspring0615/pom.xml
+++ b/exspring0615/pom.xml
@@ -33,6 +33,13 @@
 			<version>${org.springframework-version}</version>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.hibernate.validator/hibernate-validator -->
+		<dependency>
+		    <groupId>org.hibernate.validator</groupId>
+		    <artifactId>hibernate-validator</artifactId>
+		    <version>6.1.7.Final</version>
+		</dependency>
+		
 		<!-- 스프링의 데이터베이스 관련 기능을 포함하는 모듈 -->
 		<dependency>
 		    <groupId>org.springframework</groupId>
